--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Sat Sep 26 01:16:29 EEST 2009
+#Fri Oct 16 02:21:25 EEST 2009
 eclipse.preferences.version=1
 encoding//source/conf.py=utf-8
+encoding/<project>=UTF-8
