do remote upload

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,7 +19,7 @@ auto-checkout =
 pretaweb.funnelweb = git git@repos.pretaweb.com:pretaweb.blueprints
 
 [sphinx]
-recipe = collective.recipe.sphinxbuilder
+recipe = collective.recipe.sphinxbuilder>=0.6.3.1
 doc-directory = .
 doc-outputs = html
 source = ${buildout:directory}/source
@@ -31,7 +31,13 @@ recipe = zc.recipe.egg
 eggs = pretaweb.funnelweb
 initialization =
   from urllib import pathname2url as url
-arguments = 'pipeline.cfg',dict(webcrawler=dict(site_url=url('docs/html')),constructor=dict(output=url('ploneout')))
+  from sys import argv
+  args = dict(webcrawler=dict(site_url=url('docs/html')),
+      localconstructor=dict(output=url('ploneout')),
+      ploneuploader=dict(target=argv[1]),
+      schemaupdater=dict(target=argv[1])
+      )
+arguments = 'pipeline.cfg', args
 entry-points = toplone=pretaweb.funnelweb.runner:transmogrify
 extra-paths = ${zope2:location}/lib/python
 
