--- a/pipeline.cfg
+++ b/pipeline.cfg
@@ -15,12 +15,15 @@ pipeline =
     relinker
 # treeserializer before contructor to put in right order again
     treeserializer
-    constructor
-#    schemaupdater
+    localconstructor
+#    tosection
+#    topage
+    ploneuploader
+    schemaupdater
 #    publish
 #    workflowupdater
 #    browserdefault
-    savepoint
+#    savepoint
 
 
 [webcrawler]
@@ -39,6 +42,7 @@ blueprint = pretaweb.funnelweb.treeserializer
 
 [typerecognitor]
 blueprint = pretaweb.funnelweb.typerecognitor
+
 
 [relinker]
 blueprint = pretaweb.funnelweb.relinker
@@ -79,14 +83,23 @@ ignore =
 #condition = python:'title' not in item and '_path' in item
 
 
-[constructor]
+[localconstructor]
 blueprint = pretaweb.funnelweb.staticcreator
 target = ploneout
 output = ploneout
 
+
+[ploneuploader]
+blueprint = pretaweb.funnelweb.remoteconstructor
+target=http://admin:admin@localhost:8080/plone/manual/
+
+
 [schemaupdater]
-blueprint = pretaweb.funnelweb.fsschemaupdater
-target = ploneout
+blueprint = pretaweb.funnelweb.remoteschemaupdater
+target=http://admin:admin@localhost:8080/plone/manual/
+
+
+
 
 
 [browserdefault]
@@ -118,3 +131,16 @@ every = 100
 blueprint = pretaweb.funnelweb.makeattachments
 condition = python: subitem.get('_type') in ['Image']
 defaultpage = index.html
+
+[tosection]
+blueprint = collective.transmogrifier.sections.inserter
+key = string:_type
+value = string:HelpCenterReferenceManualSection
+condition = python:item.get('_type')=='Folder'
+
+
+[topage]
+blueprint = collective.transmogrifier.sections.inserter
+key = string:_type
+value = string:HelpCenterLeafPage
+condition = python:item.get('_type')=='Page'
