fix sphinx building

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,11 +19,15 @@ auto-checkout =
 pretaweb.funnelweb = git git@repos.pretaweb.com:pretaweb.blueprints
 
 [sphinx]
-recipe = collective.recipe.sphinxbuilder>=0.6.3.1
-doc-directory = .
-doc-outputs = html
+recipe = collective.recipe.sphinxbuilder
+#doc-directory = .
+outputs = html
 source = ${buildout:directory}/source
 build = ${buildout:directory}/docs
+eggs =
+  Sphinx==0.6.3
+  Docutils
+  roman
 
 
 [toplone]
