moved funnelweb to seperate packages

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = sphinx zope2  instance  test toplone
+parts = sphinx zope2  instance  test toplone 
 extends =
   	http://dist.plone.org/release/3.2/versions.cfg
 
@@ -12,11 +12,15 @@ dump-picked-versions-file = picked.cfg
 sources = sources
 sources-dir = ${buildout:directory}/src
 auto-checkout =
-    pretaweb.funnelweb
+
     
 [sources]
-#pretaweb.funnelweb = svn https://svn.plone.org/svn/collective/pretaweb.funnelweb/trunk
-pretaweb.funnelweb = git git@repos.pretaweb.com:pretaweb.blueprints
+transmogrify.webcrawler = git git@github.com:djay/transmogrify.webcrawler.git
+transmogrify.htmlcontentextractor = git git@github.com:djay/transmogrify.htmlcontentextractor.git
+transmogrify.pathsorter = git git@github.com:djay/transmogrify.pathsorter.git
+transmogrify.htmltesting = git git@github.com:djay/transmogrify.htmltesting.git
+transmogrify.siteanalyser = git git@github.com:djay/transmogrify.siteanalyser.git
+transmogrify.ploneremote = git git@github.com:djay/transmogrify.ploneremote.git
 
 [sphinx]
 recipe = collective.recipe.sphinxbuilder
@@ -32,7 +36,14 @@ eggs =
 
 [toplone]
 recipe = zc.recipe.egg
-eggs = pretaweb.funnelweb
+eggs =
+  transmogrify.htmltesting
+  transmogrify.webcrawler
+  transmogrify.siteanalyser
+  transmogrify.htmlcontentextractor
+  transmogrify.pathsorter
+  transmogrify.ploneremote
+  Products.CMFCore
 initialization =
   from urllib import pathname2url as url
   from sys import argv
@@ -42,13 +53,14 @@ initialization =
       schemaupdater=dict(target=argv[1])
       )
 arguments = 'pipeline.cfg', args
-entry-points = toplone=pretaweb.funnelweb.runner:transmogrify
+entry-points = toplone=transmogrify.htmltesting.runner:runner
 extra-paths = ${zope2:location}/lib/python
 
 [test]
 recipe = zc.recipe.testrunner
 eggs =
-	${instance:eggs}
+  ${toplone:eggs}
+  transmogrify.htmltesting
 extra-paths = ${zope2:location}/lib/python
 
 [lxml]
