--- a/pipeline.cfg
+++ b/pipeline.cfg
@@ -7,27 +7,22 @@ pipeline =
 # isindex is before moves. not sure why but it has to be
     isindex
 	makedoc1
-	makeattachments
-# treeserializer before titles so new folders get titles
-    treeserializer
+#	makeattachments
 # want titles before relinker so get original ids
     title_from_link
     relinker
 # treeserializer before contructor to put in right order again
     treeserializer
-    localconstructor
-#    tosection
-#    topage
+    encode-all
+    tosection
+    topage
+#    localconstructor
     ploneuploader
     schemaupdater
-#    publish
-#    workflowupdater
-#    browserdefault
-#    savepoint
 
 
 [webcrawler]
-blueprint = pretaweb.funnelweb.webcrawler
+blueprint = transmogrify.webcrawler
 site_url  = %s
 ignore =
 	cgi-bin
@@ -38,31 +33,29 @@ blueprint = collective.transmogrifier.sections.condition
 condition: python:item.get('_mimetype') not in ['application/x-javascript','text/css','application/x-java-byte-code'] and item.get('_path','').split('.')[-1] not in ['class']
 
 [treeserializer]
-blueprint = pretaweb.funnelweb.treeserializer
+blueprint = transmogrify.pathsorter
 
 [typerecognitor]
-blueprint = pretaweb.funnelweb.typerecognitor
+blueprint = transmogrify.webcrawler.typerecognitor
 
 
 [relinker]
-blueprint = pretaweb.funnelweb.relinker
+blueprint = transmogrify.siteanalyser.relinker
 #link_expr = python:item.get('_type',None)=='Image' and item['_path'][:-1].endswith('image') and item['_path']+'_medium' or item.get('_type',None)=='Image' and item['_path']+'/image_web' or item['_path']
 
 [templatefinder]
-blueprint = pretaweb.funnelweb.templatefinder
+blueprint = transmogrify.htmlcontentextractor
 auto=False
-1-title = text //div[@class='body']//h1
+1-title = text //div[@class='body']//h1[1]
+1-permalink = text //div[@class='body']//a[@class='headerlink']
+1-description = text //div[@class='body']/div[@class='section']/p[1]
 1-text = html //div[@class='body']
+2-title = text //div[@class='body']//h1[1]
+2-permalink = text //div[@class='body']//a[@class='headerlink']
+2-text = html //div[@class='body']
+3-text = html //div[@class='body']
 
 
-
-[transform-doc]
-blueprint = pretaweb.funnelweb.safeportaltransforms
-mimetype_field = _mimetype
-target = text/html
-keys = file
-destination = text
-condition = python:item.get("_type") in ["File"]
 
 [makedoc1]
 blueprint = collective.transmogrifier.sections.inserter
@@ -71,7 +64,7 @@ value = string:Document
 condition = python:item.get("_mimetype") in ["text/html"]
 
 [title_from_link]
-blueprint = pretaweb.funnelweb.backlinkstitle
+blueprint = transmogrify.siteanalyser.title
 ignore =
 	click
 	read more
@@ -82,65 +75,48 @@ ignore =
 #value = python: item['_path'].split('/')[-1]
 #condition = python:'title' not in item and '_path' in item
 
-
-[localconstructor]
-blueprint = pretaweb.funnelweb.staticcreator
-target = ploneout
-output = ploneout
-
-
-[ploneuploader]
-blueprint = pretaweb.funnelweb.remoteconstructor
-target=http://admin:admin@localhost:8080/plone/manual/
-
-
-[schemaupdater]
-blueprint = pretaweb.funnelweb.remoteschemaupdater
-target=http://admin:admin@localhost:8080/plone/manual/
-
-
-
-
-
-[browserdefault]
-blueprint = plone.app.transmogrifier.browserdefault
-
-[moves]
-blueprint = pretaweb.obrienimport.obrienmoves
-moves=
-
-
-
-[publish]
-blueprint = collective.transmogrifier.sections.inserter
-key = string:_transitions
-value = python:['make_visible','make_public','publish']
-condition = python:item.get('_type') in ['Image','File','Document','Project','Page']
-
-
-
-[isindex]
-blueprint = pretaweb.funnelweb.isindex
-
-[savepoint]
-blueprint = collective.transmogrifier.sections.savepoint
-every = 100
-
-
-[makeattachments]
-blueprint = pretaweb.funnelweb.makeattachments
-condition = python: subitem.get('_type') in ['Image']
-defaultpage = index.html
-
 [tosection]
 blueprint = collective.transmogrifier.sections.inserter
 key = string:_type
 value = string:HelpCenterReferenceManualSection
-condition = python:item.get('_type')=='Folder'
+condition = python:item.get('_type')=='Folder' and not options.get('disabled')
 
 
 [topage]
 blueprint = collective.transmogrifier.sections.inserter
 key = string:_type
 value = string:HelpCenterLeafPage
-condition = python:item.get('_type')=='Page'
+condition = python:item.get('_type')=='Document' and not options.get('disabled')
+
+[encode-all]
+blueprint = collective.transmogrifier.sections.codec
+keys =
+   text
+to = utf8
+
+[localconstructor]
+blueprint = transmogrify.webcrawler.cache
+target = ploneout
+output = ploneout
+
+
+[ploneuploader]
+blueprint = transmogrify.ploneremote.remoteconstructor
+target=http://admin:admin@localhost:8080/plone/manual/
+
+
+[schemaupdater]
+blueprint = transmogrify.ploneremote.remoteschemaupdater
+target=http://admin:admin@localhost:8080/plone/manual/
+
+
+
+[isindex]
+blueprint = transmogrify.siteanalyser.defaultpage
+
+
+
+[makeattachments]
+blueprint = transmogrify.siteanalyser.attach
+condition = python: subitem.get('_type') in ['Image']
+defaultpage = index-html
