Fixed buildout.cfg to use public Git repos

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,14 +13,18 @@ sources = sources
 sources-dir = ${buildout:directory}/src
 auto-checkout =
 
-    
+# Just set repo pointer here
+# Final repo URLs are format git://github.com/djay/transmogrify.htmltesting.git
+[transmogrify]
+git-repo = git://github.com/djay
+
 [sources]
-transmogrify.webcrawler = git git@github.com:djay/transmogrify.webcrawler.git
-transmogrify.htmlcontentextractor = git git@github.com:djay/transmogrify.htmlcontentextractor.git
-transmogrify.pathsorter = git git@github.com:djay/transmogrify.pathsorter.git
-transmogrify.htmltesting = git git@github.com:djay/transmogrify.htmltesting.git
-transmogrify.siteanalyser = git git@github.com:djay/transmogrify.siteanalyser.git
-transmogrify.ploneremote = git git@github.com:djay/transmogrify.ploneremote.git
+transmogrify.webcrawler = git ${transmogrify:git-repo}/transmogrify.webcrawler.git
+transmogrify.htmlcontentextractor = git ${transmogrify:git-repo}/transmogrify.htmlcontentextractor.git
+transmogrify.pathsorter = git ${transmogrify:git-repo}/transmogrify.pathsorter.git
+transmogrify.htmltesting = git ${transmogrify:git-repo}/transmogrify.htmltesting.git
+transmogrify.siteanalyser = git ${transmogrify:git-repo}/transmogrify.siteanalyser.git
+transmogrify.ploneremote = git ${transmogrify:git-repo}/transmogrify.ploneremote.git
 
 [sphinx]
 recipe = collective.recipe.sphinxbuilder
@@ -29,7 +33,7 @@ outputs = html
 source = ${buildout:directory}/source
 build = ${buildout:directory}/docs
 eggs =
-  Sphinx==0.6.3
+  Sphinx==0.6.4
   Docutils
   roman
 
@@ -84,7 +88,7 @@ debug-mode = on
 verbose-security = on
 user = admin:admin
 zcml-eggs =
-	pretaweb.funnelweb
+#	pretaweb.funnelweb
 #    plone.reload
 eggs =
     PIL
