remove text files from toplone conversion

--- a/pipeline.cfg
+++ b/pipeline.cfg
@@ -30,7 +30,7 @@ ignore =
 
 [todrop]
 blueprint = collective.transmogrifier.sections.condition
-condition: python:item.get('_mimetype') not in ['application/x-javascript','text/css','application/x-java-byte-code'] and item.get('_path','').split('.')[-1] not in ['class']
+condition: python:item.get('_mimetype') not in ['application/x-javascript','text/css','text/plain','application/x-java-byte-code'] and item.get('_path','').split('.')[-1] not in ['class']
 
 [treeserializer]
 blueprint = transmogrify.pathsorter
