Updated toplone script generation

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,3 +1,6 @@
+#
+# Buildout to create toplone command which uploads Sphinx documentation to Plone site
+#
 [buildout]
 parts = sphinx zope2  instance  test toplone 
 extends =
@@ -13,31 +16,49 @@ sources = sources
 sources-dir = ${buildout:directory}/src
 auto-checkout =
 
-# Just set repo pointer here
+# Set transmogrify package repository pointer here to allow easy switching between private and public repos
 # Final repo URLs are format git://github.com/djay/transmogrify.htmltesting.git
 [transmogrify]
 git-repo = git://github.com/djay
 
 [sources]
 transmogrify.webcrawler = git ${transmogrify:git-repo}/transmogrify.webcrawler.git
-transmogrify.htmlcontentextractor = git ${transmogrify:git-repo}/transmogrify.htmlcontentextractor.git
 transmogrify.pathsorter = git ${transmogrify:git-repo}/transmogrify.pathsorter.git
 transmogrify.htmltesting = git ${transmogrify:git-repo}/transmogrify.htmltesting.git
 transmogrify.siteanalyser = git ${transmogrify:git-repo}/transmogrify.siteanalyser.git
-transmogrify.ploneremote = git ${transmogrify:git-repo}/transmogrify.ploneremote.git
+
+# Following have been patched
+
+#transmogrify.ploneremote = git ${transmogrify:git-repo}/transmogrify.ploneremote.git
+transmogrify.ploneremote = git git://github.com/miohtama/transmogrify.ploneremote.git
+
+#transmogrify.htmlcontentextractor = git ${transmogrify:git-repo}/transmogrify.htmlcontentextractor.git
+transmogrify.htmlcontentextractor = git git://github.com/miohtama/transmogrify.htmlcontentextractor.git
 
 [sphinx]
 recipe = collective.recipe.sphinxbuilder
 #doc-directory = .
 outputs = html
 source = ${buildout:directory}/source
-build = ${buildout:directory}/docs
+build = ${buildout:directory}/build
 eggs =
   Sphinx==0.6.4
   Docutils
   roman
+  Pygments
 
 
+#
+# Recipe to create toplone command.
+# 
+# It will walk through all blueprints defined
+# in pipeline.cfg and override their target parameter
+# to be a remote Plone site given on the command line.
+# This all happeins in initialization= magic.
+#
+# Also Python logger is initialized to give us verbose
+# output. Some blueprints use logging module for the output.
+#
 [toplone]
 recipe = zc.recipe.egg
 eggs =
@@ -48,13 +69,21 @@ eggs =
   transmogrify.pathsorter
   transmogrify.ploneremote
   Products.CMFCore
+  
+# This initialization script sets remote site argument
+# for remote blueprints defined in pipeline.cfg
 initialization =
   from urllib import pathname2url as url
   from sys import argv
-  args = dict(webcrawler=dict(site_url=url('docs/html')),
+  import logging
+  
+  logging.basicConfig(level=logging.DEBUG)
+  args = dict(webcrawler=dict(site_url=url('build/html')),
       localconstructor=dict(output=url('ploneout')),
       ploneuploader=dict(target=argv[1]),
-      schemaupdater=dict(target=argv[1])
+      schemaupdater=dict(target=argv[1]),
+      publish=dict(target=argv[1]),
+      excludefromnavigation=dict(target=argv[1])
       )
 arguments = 'pipeline.cfg', args
 entry-points = toplone=transmogrify.htmltesting.runner:runner
