--- a/pipeline.cfg
+++ b/pipeline.cfg
@@ -1,24 +1,27 @@
 [transmogrifier]
 pipeline =
-	webcrawler
+    webcrawler
     typerecognitor
-    todrop
+    drop-resources
+    drop-unneeded-html
     templatefinder
 # isindex is before moves. not sure why but it has to be
-    isindex
-	makedoc1
-#	makeattachments
-# want titles before relinker so get original ids
+    set-folder-default-page
+    makedoc1
     title_from_link
     relinker
 # treeserializer before contructor to put in right order again
     treeserializer
     encode-all
-    tosection
-    topage
-#    localconstructor
+    mark-image-folders-to-navigation-exclusion
+    mark-container-remote-content-type
+    mark-page-remote-content-type
+    topublish
+#   localconstructor
     ploneuploader
     schemaupdater
+    publish
+    excludefromnavigation
 
 
 [webcrawler]
@@ -28,9 +31,16 @@ ignore =
 	cgi-bin
 	javascript:
 
-[todrop]
+# Do not consider media files in Sphinx documentation tree
+[drop-resources]
 blueprint = collective.transmogrifier.sections.condition
 condition: python:item.get('_mimetype') not in ['application/x-javascript','text/css','text/plain','application/x-java-byte-code'] and item.get('_path','').split('.')[-1] not in ['class']
+
+# Do not consider HTML files which are unndeeded in Plone
+# getindex.html is Sphinx's automatically generated index and it is not needed with this manual
+[drop-unneeded-html]
+blueprint = collective.transmogrifier.sections.condition
+condition: python:not "genindex" in item.get("_path","")
 
 [treeserializer]
 blueprint = transmogrify.pathsorter
@@ -43,17 +53,31 @@ blueprint = transmogrify.webcrawler.typerecognitor
 blueprint = transmogrify.siteanalyser.relinker
 #link_expr = python:item.get('_type',None)=='Image' and item['_path'][:-1].endswith('image') and item['_path']+'_medium' or item.get('_type',None)=='Image' and item['_path']+'/image_web' or item['_path']
 
+#
+# Extract title, description and content text from Sphinx generated HTML page
+#
+# Title is the first <h1> element
+#
+# Description is reST "admonition" with name Description 
+#
+# Text is what is left to <body> after removing title and description 
+#
+# Note that spaces in XPaths must be escaped as &#32;
+#
+# See
+#  http://www.w3schools.com/xpath/default.asp
+#  http://blog.browsermob.com/2009/04/test-your-selenium-xpath-easily-with-firebug/
+# for XPath info
+#
 [templatefinder]
 blueprint = transmogrify.htmlcontentextractor
 auto=False
 1-title = text //div[@class='body']//h1[1]
-1-permalink = text //div[@class='body']//a[@class='headerlink']
-1-description = text //div[@class='body']/div[@class='section']/p[1]
+# Permalinks are not used in Plone. We have this dummy rule here to parse 
+# them out from body so that they do not corrupt "text" field
+# 1-permalink = text //div[@class='body']//a[@class='headerlink']
+1-description = text //div[contains(@class,'admonition-description')]//p[@class='last'] //div[contains(@class,'admonition-description')] soft
 1-text = html //div[@class='body']
-2-title = text //div[@class='body']//h1[1]
-2-permalink = text //div[@class='body']//a[@class='headerlink']
-2-text = html //div[@class='body']
-3-text = html //div[@class='body']
 
 
 
@@ -69,24 +93,52 @@ ignore =
 	click
 	read more
 
-#[title_from_id]
-#blueprint = collective.transmogrifier.sections.inserter
-#key = string:title
-#value = python: item['_path'].split('/')[-1]
-#condition = python:'title' not in item and '_path' in item
 
-[tosection]
+#
+# Set hint so that that directiories are converted to HelpCenterReferenceManualSection
+# Plone content type when uploaded
+#
+[mark-container-remote-content-type]
 blueprint = collective.transmogrifier.sections.inserter
 key = string:_type
 value = string:HelpCenterReferenceManualSection
 condition = python:item.get('_type')=='Folder' and not options.get('disabled')
 
 
-[topage]
+#
+# Set hint so that that .HTML files are converted to HelpCenterLeafPage
+# Plone content type when uploaded
+#
+[mark-page-remote-content-type]
 blueprint = collective.transmogrifier.sections.inserter
 key = string:_type
 value = string:HelpCenterLeafPage
 condition = python:item.get('_type')=='Document' and not options.get('disabled')
+
+
+# 
+# Hide remote images folder from the navigation tree,
+# as images are refered only in <img src=""> 
+#
+[mark-image-folders-to-navigation-exclusion]
+blueprint = collective.transmogrifier.sections.inserter
+key = string:_exclude-from-navigation
+value = python:True
+condition = python:"images" in item.get("_path","") and item.get('_type')=='Folder' 
+
+#
+# Set the workflow transition key hint which will be used publish the item.
+# This value is later read by [publish] and we can have conditions
+# to have different WF transitions for different content types 
+#
+# Note that images do not have workflow and they inherit
+# permission settings of the parent container
+#
+[topublish]
+blueprint = collective.transmogrifier.sections.inserter
+key = string:_transitions
+value = python:["publish"]
+condition = python:item.get('_type') != 'Image' and not options.get('disabled')
 
 [encode-all]
 blueprint = collective.transmogrifier.sections.codec
@@ -99,24 +151,45 @@ blueprint = transmogrify.webcrawler.cache
 target = ploneout
 output = ploneout
 
-
+#
+# Create remote item on Plone site
+#
 [ploneuploader]
 blueprint = transmogrify.ploneremote.remoteconstructor
-target=http://admin:admin@localhost:8080/plone/manual/
 
-
+#
+# Update the remote item with new extracted content from Sphinx documentation
+# 
 [schemaupdater]
 blueprint = transmogrify.ploneremote.remoteschemaupdater
-target=http://admin:admin@localhost:8080/plone/manual/
 
-
-
-[isindex]
+#
+# Set index.html as the default page of the folder
+#
+#  Determines an item is a default page for a container if it has many links
+#  to items in that container. 
+#
+[set-folder-default-page]
 blueprint = transmogrify.siteanalyser.defaultpage
-
-
 
 [makeattachments]
 blueprint = transmogrify.siteanalyser.attach
 condition = python: subitem.get('_type') in ['Image']
 defaultpage = index-html
+
+#
+# Publish the uploaded documentation (if not public yet)
+#
+[publish]
+blueprint = transmogrify.ploneremote.remoteworkflowupdater
+transitions = submit publish
+transitions-key = _transitions
+
+#
+# Hide items from the navigation
+# (hints to which items should be hidden are set earlier in pipeline)
+#
+[excludefromnavigation]
+blueprint = transmogrify.ploneremote.remotenavigationexcluder
+
+
