Updated pipeline to ignore certain files

--- a/pipeline.cfg
+++ b/pipeline.cfg
@@ -30,6 +30,11 @@ site_url  = %s
 ignore =
 	cgi-bin
 	javascript:
+	_static
+	_sources
+	genindex\.html
+	search\.html
+	saesrchindex\.js
 
 # Do not consider media files in Sphinx documentation tree
 [drop-resources]
@@ -40,7 +45,7 @@ condition: python:item.get('_mimetype') not in ['application/x-javascript','text
 # getindex.html is Sphinx's automatically generated index and it is not needed with this manual
 [drop-unneeded-html]
 blueprint = collective.transmogrifier.sections.condition
-condition: python:not "genindex" in item.get("_path","")
+condition: python:not ("genindex" in item.get("_path","") or "search.html" in item.get("_path","") or "_static" in item.get("_path", ""))
 
 [treeserializer]
 blueprint = transmogrify.pathsorter
