Set pipeline.cfg to strip .HTML extension from uplaoded filenames

--- a/pipeline.cfg
+++ b/pipeline.cfg
@@ -27,6 +27,7 @@ pipeline =
 [webcrawler]
 blueprint = transmogrify.webcrawler
 site_url  = %s
+strip_html_extension = true
 ignore =
 	cgi-bin
 	javascript:
@@ -78,9 +79,9 @@ blueprint = transmogrify.siteanalyser.relinker
 blueprint = transmogrify.htmlcontentextractor
 auto=False
 1-title = text //div[@class='body']//h1[1]
-# Permalinks are not used in Plone. We have this dummy rule here to parse 
+# Permalinks are Sphinx's on-hover makers that are not used in Plone. We have this dummy rule here to parse 
 # them out from body so that they do not corrupt "text" field
-# 1-permalink = text //div[@class='body']//a[@class='headerlink']
+1-permalink = text //div[@class='body']//a[@class='headerlink']
 1-description = text //div[contains(@class,'admonition-description')]//p[@class='last'] //div[contains(@class,'admonition-description')] soft
 1-text = html //div[@class='body']
 
