Currently use private miohtama git repos due to development

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -22,7 +22,9 @@ auto-checkout =
 git-repo = git://github.com/djay
 
 [sources]
-transmogrify.webcrawler = git ${transmogrify:git-repo}/transmogrify.webcrawler.git
+#transmogrify.webcrawler = git ${transmogrify:git-repo}/transmogrify.webcrawler.git
+transmogrify.webcrawler = git git@github.com:miohtama/transmogrify.webcrawler.git
+
 transmogrify.pathsorter = git ${transmogrify:git-repo}/transmogrify.pathsorter.git
 transmogrify.htmltesting = git ${transmogrify:git-repo}/transmogrify.htmltesting.git
 transmogrify.siteanalyser = git ${transmogrify:git-repo}/transmogrify.siteanalyser.git
@@ -34,6 +36,7 @@ transmogrify.ploneremote = git git://github.com/miohtama/transmogrify.ploneremot
 
 #transmogrify.htmlcontentextractor = git ${transmogrify:git-repo}/transmogrify.htmlcontentextractor.git
 transmogrify.htmlcontentextractor = git git://github.com/miohtama/transmogrify.htmlcontentextractor.git
+
 
 [sphinx]
 recipe = collective.recipe.sphinxbuilder
