--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,7 +15,7 @@ dump-picked-versions-file = picked.cfg
 sources = sources
 sources-dir = ${buildout:directory}/src
 auto-checkout =
-
+allow-picked-versions = true
 # Set transmogrify package repository pointer here to allow easy switching between private and public repos
 # Final repo URLs are format git://github.com/djay/transmogrify.htmltesting.git
 [transmogrify]
@@ -142,9 +142,37 @@ recipe = collective.recipe.omelette
 eggs = ${instance:eggs}
 
 [versions]
-zc.buildout=1.4.1
-roadrunner = 0.2.3.1
-z3c.form = 1.9.0
-zc.recipe.egg=1.2.0
+BeautifulSoup = 3.1.0.1
+Jinja2 = 2.5.2
+PIL = 1.1.7
+Pygments = 1.3.1
+Sphinx = 0.6.4
+argparse = 1.1
+buildout.dumppickedversions = 0.4
+collective.recipe.sphinxbuilder = 0.6.3.3
+collective.transmogrifier = 1.2
+distribute = 0.6.14
+docutils = 0.7
+Docutils = 0.7
+elementtree = 1.2.7-20070827-preview
+lxml = 2.2.2
+mr.developer = 1.15
 plone.reload = 1.0
-
+python-openid = 2.2.5
+roadrunner = 0.2.3.1
+roman = 1.4.0
+transmogrify.htmlcontentextractor = 1.0dev
+transmogrify.htmltesting = 0.2dev
+transmogrify.ploneremote = 1.0a1dev
+transmogrify.siteanalyser = 1.0a1dev
+z3c.autoinclude = 0.3.3
+z3c.form = 1.9.0
+z3c.recipe.staticlxml = 0.7.2
+zc.buildout = 1.4.3
+zc.recipe.cmmi = 1.3.2
+zc.recipe.egg = 1.2.0
+#zc.recipe.testrunner = 1.4.0 depends on too new z3c.recipe.scripts and zc.buildout
+zc.recipe.testrunner = 1.3.0
+zope.exceptions = 3.6.1
+zope.interface = 3.6.1
+zope.testrunner = 4.0.0b5
