Avoid pinning some eggs in the old fashioned way with '==' in the part; instead use whatever is in the versions part.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -45,7 +45,7 @@ outputs = html
 source = ${buildout:directory}/source
 build = ${buildout:directory}/build
 eggs =
-  Sphinx==0.6.4
+  Sphinx
   Docutils
   roman
   Pygments
@@ -101,7 +101,7 @@ extra-paths = ${zope2:location}/lib/python
 
 [lxml]
 recipe = z3c.recipe.staticlxml
-egg = lxml == 2.2.2
+egg = lxml
 
 [zope2]
 recipe = plone.recipe.zope2install
@@ -135,7 +135,7 @@ zcml =
 recipe = roadrunner:plone
 zope2-instance = instance
 packages-under-test =
-    pretaweb.funnelweb==0.2
+    pretaweb.funnelweb
 
 [omelette]
 recipe = collective.recipe.omelette
@@ -176,3 +176,4 @@ zc.recipe.testrunner = 1.3.0
 zope.exceptions = 3.6.1
 zope.interface = 3.6.1
 zope.testrunner = 4.0.0b5
+pretaweb.funnelweb = 0.2
