--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,15 +2,19 @@
 # Buildout to create toplone command which uploads Sphinx documentation to Plone site
 #
 [buildout]
-parts = sphinx zope2  instance  test toplone 
+parts = 
+        sphinx 
+        toplone 
+
 extends =
-  	http://dist.plone.org/release/3.2/versions.cfg
+        http://dist.plone.org/release/4.0.1/versions.cfg
 
 versions = versions
 
 extensions =
   mr.developer
   buildout.dumppickedversions
+ 
 dump-picked-versions-file = picked.cfg
 sources = sources
 sources-dir = ${buildout:directory}/src
@@ -71,7 +75,6 @@ eggs =
   transmogrify.htmlcontentextractor
   transmogrify.pathsorter
   transmogrify.ploneremote
-  Products.CMFCore
   
 # This initialization script sets remote site argument
 # for remote blueprints defined in pipeline.cfg
@@ -90,90 +93,25 @@ initialization =
       )
 arguments = 'pipeline.cfg', args
 entry-points = toplone=transmogrify.htmltesting.runner:runner
-extra-paths = ${zope2:location}/lib/python
 
 [test]
 recipe = zc.recipe.testrunner
 eggs =
   ${toplone:eggs}
   transmogrify.htmltesting
-extra-paths = ${zope2:location}/lib/python
 
 [lxml]
 recipe = z3c.recipe.staticlxml
 egg = lxml
 
-[zope2]
-recipe = plone.recipe.zope2install
-url = ${versions:zope2-url}
-fake-zope-eggs = true
-additional-fake-eggs =
-    ZConfig
-    pytz
-    zope.site
-
-
-[instance]
-recipe = plone.recipe.zope2instance
-zope2-location = ${zope2:location}
-debug-mode = on
-verbose-security = on
-user = admin:admin
-zcml-eggs =
-#	pretaweb.funnelweb
-#    plone.reload
-eggs =
-    PIL
-    Plone
-    plone.i18n
-    ${instance:zcml-eggs}
-    ${lxml:egg}
-zcml =
-	${instance:zcml-eggs}
-
-[roadrunner]
-recipe = roadrunner:plone
-zope2-instance = instance
-packages-under-test =
-    pretaweb.funnelweb
-
-[omelette]
-recipe = collective.recipe.omelette
-eggs = ${instance:eggs}
 
 [versions]
-BeautifulSoup = 3.1.0.1
-Jinja2 = 2.5.2
-PIL = 1.1.7
-Pygments = 1.3.1
-Sphinx = 0.6.4
-argparse = 1.1
-buildout.dumppickedversions = 0.4
-collective.recipe.sphinxbuilder = 0.6.3.3
-collective.transmogrifier = 1.2
-distribute = 0.6.14
-docutils = 0.7
-Docutils = 0.7
-elementtree = 1.2.7-20070827-preview
-lxml = 2.2.2
-mr.developer = 1.15
-plone.reload = 1.0
-python-openid = 2.2.5
+zc.buildout=1.4.1
 roadrunner = 0.2.3.1
-roman = 1.4.0
-transmogrify.htmlcontentextractor = 1.0dev
-transmogrify.htmltesting = 0.2dev
-transmogrify.ploneremote = 1.0a1dev
-transmogrify.siteanalyser = 1.0a1dev
-z3c.autoinclude = 0.3.3
 z3c.form = 1.9.0
-z3c.recipe.staticlxml = 0.7.2
-zc.buildout = 1.4.3
-zc.recipe.cmmi = 1.3.2
-zc.recipe.egg = 1.2.0
-#zc.recipe.testrunner = 1.4.0 depends on too new z3c.recipe.scripts and zc.buildout
-zc.recipe.testrunner = 1.3.0
-zope.exceptions = 3.6.1
-zope.interface = 3.6.1
-zope.testrunner = 4.0.0b5
-pretaweb.funnelweb = 0.2
+zc.recipe.egg=1.2.0
+plone.reload = 1.0
+collective.recipe.sphinxbuilder = 0.7.0
+Sphinx = 1.0.4
+Docutils = 0.6
+
