Plone 4 /toplone buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -27,7 +27,7 @@ git-repo = git://github.com/djay
 
 [sources]
 #transmogrify.webcrawler = git ${transmogrify:git-repo}/transmogrify.webcrawler.git
-transmogrify.webcrawler = git git@github.com:miohtama/transmogrify.webcrawler.git
+transmogrify.webcrawler = git git://github.com/miohtama/transmogrify.webcrawler.git
 
 transmogrify.pathsorter = git ${transmogrify:git-repo}/transmogrify.pathsorter.git
 transmogrify.htmltesting = git ${transmogrify:git-repo}/transmogrify.htmltesting.git
@@ -36,7 +36,7 @@ transmogrify.siteanalyser = git ${transmogrify:git-repo}/transmogrify.siteanalys
 # Following have been patched
 
 #transmogrify.ploneremote = git ${transmogrify:git-repo}/transmogrify.ploneremote.git
-transmogrify.ploneremote = git git://github.com/miohtama/transmogrify.ploneremote.git
+transmogrify.ploneremote =  git git://github.com/miohtama/transmogrify.ploneremote.git
 
 #transmogrify.htmlcontentextractor = git ${transmogrify:git-repo}/transmogrify.htmlcontentextractor.git
 transmogrify.htmlcontentextractor = git git://github.com/miohtama/transmogrify.htmlcontentextractor.git
