Fixed zope.app.component import bug

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -33,6 +33,10 @@ transmogrify.pathsorter = git ${transmogrify:git-repo}/transmogrify.pathsorter.g
 transmogrify.htmltesting = git ${transmogrify:git-repo}/transmogrify.htmltesting.git
 transmogrify.siteanalyser = git ${transmogrify:git-repo}/transmogrify.siteanalyser.git
 
+# transmogrify.htmltesting = git ${transmogrify:git-repo}/transmogrify.htmltesting.git
+transmogrify.htmltesting = git git://github.com/miohtama/transmogrify.htmltesting.git
+
+
 # Following have been patched
 
 #transmogrify.ploneremote = git ${transmogrify:git-repo}/transmogrify.ploneremote.git
