Fixed .html extension in the links of uploaded docs

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -31,11 +31,12 @@ transmogrify.webcrawler = git git://github.com/miohtama/transmogrify.webcrawler.
 
 transmogrify.pathsorter = git ${transmogrify:git-repo}/transmogrify.pathsorter.git
 transmogrify.htmltesting = git ${transmogrify:git-repo}/transmogrify.htmltesting.git
-transmogrify.siteanalyser = git ${transmogrify:git-repo}/transmogrify.siteanalyser.git
+
+#transmogrify.siteanalyser = git ${transmogrify:git-repo}/transmogrify.siteanalyser.git
+transmogrify.siteanalyser = git git://github.com/miohtama/transmogrify.siteanalyser.git 
 
 # transmogrify.htmltesting = git ${transmogrify:git-repo}/transmogrify.htmltesting.git
 transmogrify.htmltesting = git git://github.com/miohtama/transmogrify.htmltesting.git
-
 
 # Following have been patched
 
