--- a/pipeline.cfg
+++ b/pipeline.cfg
@@ -16,6 +16,7 @@ pipeline =
     mark-image-folders-to-navigation-exclusion
     mark-container-remote-content-type
     mark-page-remote-content-type
+    fix-links
     topublish
 #   localconstructor
     ploneuploader
@@ -81,10 +82,9 @@ auto=False
 1-title = text //div[@class='body']//h1[1]
 # Permalinks are Sphinx's on-hover makers that are not used in Plone. We have this dummy rule here to parse 
 # them out from body so that they do not corrupt "text" field
-1-permalink = text //div[@class='body']//a[@class='headerlink']
-1-description = text //div[contains(@class,'admonition-description')]//p[@class='last'] //div[contains(@class,'admonition-description')] soft
+# 1-permalink = text //div[@class='body]//a[@class='headerlink']
 1-text = html //div[@class='body']
-
+1-description = text //div[contains(@class,'admonition-description')]//p[@class='last'] //div[contains(@class,'admonition-description')] soft
 
 
 [makedoc1]
@@ -131,6 +131,18 @@ blueprint = collective.transmogrifier.sections.inserter
 key = string:_exclude-from-navigation
 value = python:True
 condition = python:"images" in item.get("_path","") and item.get('_type')=='Folder' 
+
+#
+# Sphinx links have .html extension in HTML code,
+# but plone.org prefers URLs without extension.
+# This blueprint will iterate through HTML code
+# and remove .html extension from all links which are site local
+# 
+[fix-links]
+blueprint = transmogrifier.siteanalyser.linkmanipulator
+fields = text
+extensions = .html
+relative-only = true
 
 #
 # Set the workflow transition key hint which will be used publish the item.
