Updated buildout and pipeline to use new packages

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -94,7 +94,8 @@ initialization =
       ploneuploader=dict(target=argv[1]),
       schemaupdater=dict(target=argv[1]),
       publish=dict(target=argv[1]),
-      excludefromnavigation=dict(target=argv[1])
+      excludefromnavigation=dict(target=argv[1]),
+      cleanremotefolder=dict(target=argv[1])
       )
 arguments = 'pipeline.cfg', args
 entry-points = toplone=transmogrify.htmltesting.runner:runner
