--- a/pipeline.cfg
+++ b/pipeline.cfg
@@ -16,6 +16,8 @@ pipeline =
     mark-image-folders-to-navigation-exclusion
     mark-container-remote-content-type
     mark-page-remote-content-type
+    mark-remote-folder-to-be-cleaned
+    mark-remote-root-to-be-cleaned
     fix-links
     topublish
 #   localconstructor
@@ -23,7 +25,7 @@ pipeline =
     schemaupdater
     publish
     excludefromnavigation
-
+    cleanremotefolder
 
 [webcrawler]
 blueprint = transmogrify.webcrawler
@@ -132,6 +134,21 @@ key = string:_exclude-from-navigation
 value = python:True
 condition = python:"images" in item.get("_path","") and item.get('_type')=='Folder' 
 
+# All folderish content should be checked if they contain
+# any items on the remote site which are not presented locally
+[mark-remote-folder-to-be-cleaned]
+blueprint = collective.transmogrifier.sections.inserter
+key = string:_prune-folder
+value = python:True
+condition = python:(item.get('_type')=='HelpCenterReferenceManualSection' or item.get('_type')=='HelpCenterReferenceManual') and not options.get('disabled')
+
+# Clean the root of the remote reference manual 
+[mark-remote-root-to-be-cleaned]
+blueprint = collective.transmogrifier.sections.inserter
+key = string:_prune-folder
+value = python:True
+condition = python:(item.get('_root_item', None) == True)
+
 #
 # Sphinx links have .html extension in HTML code,
 # but plone.org prefers URLs without extension.
@@ -209,5 +226,12 @@ transitions-key = _transitions
 #
 [excludefromnavigation]
 blueprint = transmogrify.ploneremote.remotenavigationexcluder
+
+# Delete objects which are on the remote site,
+# but not in local copy
+[cleanremotefolder]
+blueprint = transmogrify.ploneremote.remoteprune
+
+
 
 
