change how .html is removed

--- a/pipeline.cfg
+++ b/pipeline.cfg
@@ -18,7 +18,6 @@ pipeline =
     mark-page-remote-content-type
     mark-remote-folder-to-be-cleaned
     mark-remote-root-to-be-cleaned
-    fix-links
     topublish
 #   localconstructor
     ploneuploader
@@ -60,7 +59,7 @@ blueprint = transmogrify.webcrawler.typerecognitor
 
 [relinker]
 blueprint = transmogrify.siteanalyser.relinker
-#link_expr = python:item.get('_type',None)=='Image' and item['_path'][:-1].endswith('image') and item['_path']+'_medium' or item.get('_type',None)=='Image' and item['_path']+'/image_web' or item['_path']
+link_expr = python:item['_path'].endswith('.html') and item['_path'][:-5] or item['_path']
 
 #
 # Extract title, description and content text from Sphinx generated HTML page
@@ -149,17 +148,6 @@ key = string:_prune-folder
 value = python:True
 condition = python:(item.get('_root_item', None) == True)
 
-#
-# Sphinx links have .html extension in HTML code,
-# but plone.org prefers URLs without extension.
-# This blueprint will iterate through HTML code
-# and remove .html extension from all links which are site local
-# 
-[fix-links]
-blueprint = transmogrifier.siteanalyser.linkmanipulator
-fields = text
-extensions = .html
-relative-only = true
 
 #
 # Set the workflow transition key hint which will be used publish the item.
