--- a/buildout.cfg
+++ b/buildout.cfg
@@ -86,10 +86,10 @@ eggs =
 initialization =
   from urllib import pathname2url as url
   from sys import argv
-  import logging
+  import logging, os
   
   logging.basicConfig(level=logging.DEBUG)
-  args = dict(webcrawler=dict(site_url=url('build/html')),
+  args = dict(webcrawler=dict(site_url='file://'+os.getcwd()+'/build/html/'),
       localconstructor=dict(output=url('ploneout')),
       ploneuploader=dict(target=argv[1]),
       schemaupdater=dict(target=argv[1]),
