use standard template rather than mikkos

--- a/pipeline.cfg
+++ b/pipeline.cfg
@@ -14,8 +14,8 @@ pipeline =
     treeserializer
     encode-all
     mark-image-folders-to-navigation-exclusion
-    mark-container-remote-content-type
-    mark-page-remote-content-type
+#    mark-container-remote-content-type
+#    mark-page-remote-content-type
     mark-remote-folder-to-be-cleaned
     mark-remote-root-to-be-cleaned
     topublish
@@ -83,9 +83,10 @@ auto=False
 1-title = text //div[@class='body']//h1[1]
 # Permalinks are Sphinx's on-hover makers that are not used in Plone. We have this dummy rule here to parse 
 # them out from body so that they do not corrupt "text" field
-# 1-permalink = text //div[@class='body]//a[@class='headerlink']
+1-permalink = text //div[@class='body']//a[@class='headerlink']
 1-text = html //div[@class='body']
-1-description = text //div[contains(@class,'admonition-description')]//p[@class='last'] //div[contains(@class,'admonition-description')] soft
+1-description = optional //div[contains(@class,'admonition-description')]//p[@class='last']
+                     //div[contains(@class,'admonition-description')]
 
 
 [makedoc1]
@@ -179,12 +180,14 @@ output = ploneout
 #
 [ploneuploader]
 blueprint = transmogrify.ploneremote.remoteconstructor
+target=
 
 #
 # Update the remote item with new extracted content from Sphinx documentation
 # 
 [schemaupdater]
 blueprint = transmogrify.ploneremote.remoteschemaupdater
+target = ${ploneuploader:target}
 
 #
 # Set index.html as the default page of the folder
@@ -207,6 +210,7 @@ defaultpage = index-html
 blueprint = transmogrify.ploneremote.remoteworkflowupdater
 transitions = submit publish
 transitions-key = _transitions
+target = ${ploneuploader:target}
 
 #
 # Hide items from the navigation
@@ -214,11 +218,13 @@ transitions-key = _transitions
 #
 [excludefromnavigation]
 blueprint = transmogrify.ploneremote.remotenavigationexcluder
+target = ${ploneuploader:target}
 
 # Delete objects which are on the remote site,
 # but not in local copy
 [cleanremotefolder]
 blueprint = transmogrify.ploneremote.remoteprune
+target = ${ploneuploader:target}
 
 
 
