put back in changetype

--- a/pipeline.cfg
+++ b/pipeline.cfg
@@ -14,8 +14,8 @@ pipeline =
     treeserializer
     encode-all
     mark-image-folders-to-navigation-exclusion
-#    mark-container-remote-content-type
-#    mark-page-remote-content-type
+    mark-container-remote-content-type
+    mark-page-remote-content-type
     mark-remote-folder-to-be-cleaned
     mark-remote-root-to-be-cleaned
     topublish
@@ -29,7 +29,6 @@ pipeline =
 [webcrawler]
 blueprint = transmogrify.webcrawler
 site_url  = %s
-strip_html_extension = true
 ignore =
 	cgi-bin
 	javascript:
@@ -79,7 +78,6 @@ link_expr = python:item['_path'].endswith('.html') and item['_path'][:-5] or ite
 #
 [templatefinder]
 blueprint = transmogrify.htmlcontentextractor
-auto=False
 1-title = text //div[@class='body']//h1[1]
 # Permalinks are Sphinx's on-hover makers that are not used in Plone. We have this dummy rule here to parse 
 # them out from body so that they do not corrupt "text" field
